Fix bottom of canvas being cut off
Fixes #810

--- a/src/site/shared/containers/Header/index.scss
+++ b/src/site/shared/containers/Header/index.scss
@@ -8,7 +8,8 @@ header {
     flex-direction: row;
 
     width: 100%;
-    height: $header-height;
+    min-height: $header-height;
+    max-height: $header-height;
     padding: $header-padding 0;
 
     border: $header-border;
